Fixed package.json name and version formatting errors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "iTunes AppleScripts",
-    "version": "0.1",
+    "name": "itunes-applescripts",
+    "version": "0.1.0",
     "devDependencies": {
         "run-applescript": "^3.0.0",
         "gulp": "^3.9.1"
