--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "itunes-applescripts",
     "version": "0.1.0",
     "devDependencies": {
-        "run-applescript": "^3.0.0",
+        "osa": "^2.3.0",
         "gulp": "^3.9.1"
     }
 }
