--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "itunes-applescripts",
     "version": "0.1.0",
     "devDependencies": {
-        "gulp": "^3.9.1"
+        "gulp": "^3.9.1",
+        "gulp-watch": "^4.3.6"
     }
 }
