--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "devDependencies": {
         "gulp": "^3.9.1",
-        "gulp-watch": "^4.3.6"
+        "gulp-watch": "^4.3.6",
+        "fancy-log": "^1.2.0"
     }
 }
