--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "itunes-applescripts",
-    "version": "0.1.0",
-    "devDependencies": {
-        "gulp": "^3.9.1",
-        "gulp-watch": "^4.3.6",
-        "fancy-log": "^1.2.0",
-        "command-line-args": "^3.0.0"
-    }
+  "name": "itunes-applescripts",
+  "version": "0.1.0",
+  "devDependencies": {
+    "command-line-args": "^3.0.0",
+    "fancy-log": "^1.2.0",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-through": "^0.4.0"
+  }
 }
