--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "fancy-log": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
-    "gulp-through": "^0.4.0"
+    "gulp-through": "^0.4.0",
+    "gulp-watch": "^4.3.8"
   }
 }
