--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "itunes-applescripts",
   "version": "0.1.0",
   "devDependencies": {
+    "bower": "^1.7.9",
     "command-line-args": "^3.0.0",
     "fancy-log": "^1.2.0",
     "gulp": "^3.9.1",
