--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "bower": "^1.7.9",
     "command-line-args": "^3.0.0",
+    "concatenate-files": "^0.1.1",
     "fancy-log": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-watch": "^4.3.8"
