--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "concatenate-files": "^0.1.1",
     "fancy-log": "^1.2.0",
     "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.8",
-    "q": "^1.4.1"
+    "gulp-watch": "^4.3.8"
   }
 }
