--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "concatenate-files": "^0.1.1",
     "fancy-log": "^1.2.0",
     "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.8"
+    "gulp-watch": "^4.3.8",
+    "mkdirp": "^0.5.1"
   }
 }
