--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "gulp-watch": "^4.3.8",
     "mkdirp": "^0.5.1",
     "typescript-compiler": "^1.4.1-2"
+  },
+  "dependencies": {
+    "glob": "latest"
   }
 }
