--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "typescript-compiler": "^1.4.1-2",
     "wordwrap": "^1.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
